update some files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+server.port=8080
+server.servlet.context-path=/api/v1
+
+# -- database --
+spring.datasource.url=jdbc:postgresql://localhost:5432/chorusdb
+spring.datasource.username=chorus
+spring.datasource.password=chorus@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
