update web api module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8080
 server.servlet.context-path=/api/v1
 
+springfox.documentation.swagger.v2.path=/api-docs
+
 # -- database --
 spring.datasource.url=jdbc:postgresql://localhost:5432/chorusdb
 spring.datasource.username=chorus
