commit some rest controller and dao service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/api/v1
 springfox.documentation.swagger.v2.path=/api-docs
 
 # -- database --
-spring.datasource.url=jdbc:postgresql://localhost:5432/chorusdb
+spring.datasource.url=jdbc:postgresql://gnetna.com:5432/chorusdb
 spring.datasource.username=chorus
 spring.datasource.password=chorus@123
 spring.datasource.driver-class-name=org.postgresql.Driver
