--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.username=chorus
 spring.datasource.password=chorus@123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+server.neo4j.url=bolt://gnetna.com:7687
+server.neo4j.username=neo4j
+server.neo4j.password=neo4j123
+
+
