--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <java.version>1.8</java.version>
         <springfox-version>2.7.0</springfox-version>
+        <neo4j-driver-version>1.7.3</neo4j-driver-version>
+        <guava-version>20.0</guava-version>
     </properties>
 
     <dependencies>
@@ -37,7 +39,7 @@
         <dependency>
             <groupId>org.neo4j.driver</groupId>
             <artifactId>neo4j-java-driver</artifactId>
-            <version>1.7.3</version>
+            <version>${neo4j-driver-version}</version>
         </dependency>
 
         <dependency>
@@ -45,6 +47,19 @@
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.40</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava-version}</version>
+        </dependency>
+
 
         <!--SpringFox dependencies -->
         <dependency>
